--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </section>
 
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link link">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
