Выполнена работа в соответствии с заданием

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </ul>
       </section>
 
-      <section class="photo-grid">
-        <ul>
+      <section>
+        <ul class="photo-grid">
           <li>
             <img class="photo-grid__photo" src="images/photo-grid-train.jpg" alt="Окно поезда">
           </li>
@@ -88,7 +88,7 @@
       </section>
 
       <section class="places">
-        <div class="places__place place">
+        <article class="places__place place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -104,9 +104,9 @@
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
               запах стального, прохладного моря.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="places__place place">
+        <article class="places__place place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -122,9 +122,9 @@
               накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
               в Мурманск.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="places__place place">
+        <article class="places__place place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -140,9 +140,9 @@
               всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
               пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="places__place place">
+        <article class="places__place place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -157,7 +157,7 @@
               можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
               рекорд — 197.011 км/ч.</p>
           </div>
-        </div>
+        </article>
 
         <div class="places__place place">
           <h2 class="place__title">Карелия</h2>
