--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
 
       <section class="intro">
-        <h1 class="intro__title">Чего мы там не видели?</h1>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
           вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
@@ -47,7 +47,7 @@
       </section>
 
       <section>
-        <ul class="photo-grid">
+        <ul class="list photo-grid">
           <li>
             <img class="photo-grid__photo" src="images/photo-grid-train.jpg" alt="Окно поезда">
           </li>
@@ -91,7 +91,7 @@
         <article class="places__place place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a class="place__link link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img class="place__image" src="images/place-kosa.jpg" alt="Куршская коса">
@@ -99,7 +99,7 @@
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
               природная зона на краю российского анклава.</p>
-            <p class="place__paragraph second-paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
               исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
               запах стального, прохладного моря.</p>
@@ -109,14 +109,14 @@
         <article class="places__place place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
           <div  class="place__text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
               юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-            <p class="place__paragraph second-paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
               Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
               Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
               накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -127,7 +127,7 @@
         <article class="places__place place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
@@ -136,7 +136,7 @@
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
               озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
               воздухом.</p>
-            <p class="place__paragraph second-paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
               всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
               пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
@@ -145,24 +145,24 @@
         <article class="places__place place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a class="place__link link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
               самый большой источник пресной воды и одно из красивейших мест в России.</p>
-            <p class="place__paragraph second-paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
               скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как
               можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
               рекорд — 197.011 км/ч.</p>
           </div>
         </article>
 
-        <div class="places__place place">
+        <article class="places__place place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
+            <p class="place__url-heading">Url</p>
             <a class="place__link link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
@@ -174,7 +174,7 @@
               девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от
               земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
 
       </section>
 
