--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="fonts/fonts.css">
 </head>
 
-<body class="root">
-  <div class="page">
+<body class="page">
+  <div class="page__container">
 
     <header class="header">
       <a href="#"><img class="header__logo" src="images/header-logo.svg" alt="Логотип"></a>
