--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="page__container">
 
     <header class="header">
-      <a href="#"><img class="header__logo" src="images/header-logo.svg" alt="Логотип"></a>
+      <a href="#" target="_blank"><img class="header__logo link" src="images/header-logo.svg" alt="Логотип" ></a>
       <ul class="header__lang-links list">
-        <li><a class="header__lang-link link header__lang-link_active" href="#">Ru</a></li>
-        <li><a class="header__lang-link link" href="#">En</a></li>
+        <li><a class="header__lang-link link header__lang-link_active" href="#" target="_blank">Ru</a></li>
+        <li><a class="header__lang-link link" href="#" target="_blank">En</a></li>
       </ul>
     </header>
 
-    <main class="content">
+    <!-- <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -184,10 +184,9 @@
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
+    </main> -->
 
-    </main>
-
-    <footer class="footer">
+    <!-- <footer class="footer">
       <nav>
         <ul class="footer__links list">
           <li><a class="footer__link link" href="https://yandex.ru/maps">Карты</a></li>
@@ -198,7 +197,7 @@
         </ul>
       </nav>
       <p class="footer__copyright">© 2022. Павлов Виктор</p>
-    </footer>
+    </footer> -->
 
   </div>
 </body>
