--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </ul>
     </header>
 
-    <!-- <main class="content">
+    <main>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -29,7 +29,7 @@
         <p class="lead__caption">Ваша полка — верхняя</p>
       </section>
 
-      <section class="intro">
+      <!-- <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -44,9 +44,9 @@
           <li class="intro__fact">Природных заповедников <span class="intro__span">105</span></li>
           <li class="intro__fact">Аэропортов <span class="intro__span">241</span></li>
         </ul>
-      </section>
+      </section> -->
 
-      <section>
+      <!-- <section>
         <ul class="list photo-grid">
           <li>
             <img class="photo-grid__photo" src="images/photo-grid-train.jpg" alt="Окно поезда">
@@ -85,9 +85,9 @@
             <img class="photo-grid__photo" src="images/photo-grid-ergaki.jpg" alt="Лесистые горы в тумане">
           </li>
         </ul>
-      </section>
+      </section> -->
 
-      <section class="places">
+      <!-- <section class="places">
         <article class="places__place place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -176,15 +176,15 @@
           </div>
         </article>
 
-      </section>
+      </section> -->
 
-      <section class="cover">
+      <!-- <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link link">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
 
     <!-- <footer class="footer">
       <nav>
